# minicode

./: .env.example  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
src/: agent.py  main.py  memory.py  security.py  skills.py  tools.py
tests/: test_security.py  test_skills.py  test_tools.py
